viewer can now plot the skeletons and contours in the main window (code originally by Avelino)

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ tierpsy/analysis/ske_create/segWormPython/cython_files/curvspace.c
 tierpsy/analysis/ske_create/segWormPython/cython_files/circCurvature.c
 
 tierpsy/tests/data/*
+.vscode/
