--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: docker CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on release events
   release:
     types: [published]
 
@@ -15,10 +15,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      DOCKER_USER: ${{ secrets.DOCKERHUB_USER_LUIGI }}
-      DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN_LUIGI }}
+      DOCKER_USER: ${{ secrets.DOCKERHUB_USER }}
+      DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       RELEASE_TAG: ${{ github.event.release.tag_name }}
-      REPO_NAME: tierpsy_foo
+      REPO_NAME: tierpsy_tracker
     steps:
       - name: check out repo code
         uses: actions/checkout@v2
