--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,16 @@ jobs:
         uses: actions/checkout@v2
       - name: docker login, build, tag, and push
         run: |
-          if [[ -z $RELEASE_TAG ]]
-          then
-          tagname='latest'
-          else
-          tagname=$RELEASE_TAG
-          fi
           echo $tagname
           echo $DOCKER_USER/$REPO_NAME:"${tagname}"
           docker login -u $DOCKER_USER -p $DOCKER_TOKEN
           docker build -t $REPO_NAME . -f docker/Dockerfile
-          docker tag $REPO_NAME $DOCKER_USER/$REPO_NAME:"${tagname}"
-          docker push $DOCKER_USER/$REPO_NAME:"${tagname}"
+          docker tag $REPO_NAME $DOCKER_USER/$REPO_NAME
+          docker push $DOCKER_USER/$REPO_NAME
+          if [[ -z $RELEASE_TAG ]]
+          then
+          docker tag $REPO_NAME $DOCKER_USER/$REPO_NAME:$RELEASE_TAG
+          docker push $DOCKER_USER/$REPO_NAME:$RELEASE_TAG
+          fi
+
 
