--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       DOCKER_USER: ${{ secrets.DOCKERHUB_USER }}
       DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       RELEASE_TAG: ${{ github.event.release.tag_name }}
-      REPO_NAME: tierpsy-tracker
+      IMAGE_NAME: tierpsy-tracker
     steps:
       - name: check out repo code
         uses: actions/checkout@v2
@@ -31,12 +31,11 @@ jobs:
           tagname=$RELEASE_TAG
           fi
           echo "${tagname}"
-          echo $DOCKER_USER/$REPO_NAME:"${tagname}"
           docker login -u $DOCKER_USER -p $DOCKER_TOKEN
-          docker build -t $REPO_NAME . -f docker/Dockerfile
-          docker tag $REPO_NAME $DOCKER_USER/$REPO_NAME:latest
-          docker push $DOCKER_USER/$REPO_NAME:latest
-          docker tag $REPO_NAME $DOCKER_USER/$REPO_NAME:"${tagname}"
-          docker push $DOCKER_USER/$REPO_NAME:"${tagname}"
+          docker build -t $IMAGE_NAME . -f docker/Dockerfile
+          docker tag $IMAGE_NAME $DOCKER_USER/$IMAGE_NAME:latest
+          docker push $DOCKER_USER/$IMAGE_NAME:latest
+          docker tag $IMAGE_NAME $DOCKER_USER/$IMAGE_NAME:"${tagname}"
+          docker push $DOCKER_USER/$IMAGE_NAME:"${tagname}"
 
 
