Food cnt improvements (#71)
* NN food detection: trying to improve on selection of the correct contour if the NN returns more than one area

* making sure mask_file open for the minimum required amount of time in get_food_prob

* changed get_food_contour_nn signature to avoid loading a model over and over again with possible memory leaks

* Dockerfile: adding command to download trained food model from zenodo

* Dockerfile: successfully added instructions to open tierpsy_gui after launching the container

* getFoodContourNN.py: new algorithm is now implemented in the default Tierpsy pipeline

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,6 +44,10 @@ RUN ls -lah ${CODE_PATH}/*
 RUN pip3 install -r ${CODE_PATH}/docker/docker_requirements.txt
 RUN pip3 install -e ${CODE_PATH}
 
+# get food contour model
+RUN wget https://zenodo.org/record/5575338/files/unet_RMSprop-5-04999-0.3997.h5 \
+    -P ${CODE_PATH}/tierpsy/extras/
+
 # edit .bashrc:
 # python => python3, script to check if tierpsy is running, splash screen
 RUN echo "alias python=python3" >> ${DOCKER_HOME}/.bashrc
@@ -51,6 +55,7 @@ RUN echo "alias is_tierpsy_running=${CODE_PATH}/docker/is_tierpsy_running.sh" \
     >> ~/.bashrc
 RUN echo "clear" >> ${DOCKER_HOME}/.bashrc
 RUN echo "cat ${CODE_PATH}/docker/tierpsy_splash.txt" >> ${DOCKER_HOME}/.bashrc
+RUN echo "tierpsy_gui &" >> ${DOCKER_HOME}/.bashrc
 
 # make it so that tierpsy opens in the /DATA folder
 # hopefully this works with github actions
